--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 						</div>
 					</div>
 					<div class="row text-center">
-						<a class="btn td-btn outline green mb-30" href="https://drive.google.com/file/d/1Q1J2qRZUruK4OPZfZF2FmTYJzOr2RaRQ/view?usp=sharing" target="_blank" download><span class="glyphicon glyphicon-download-alt"></span> Download PDF</a>
+						<a class="btn td-btn outline green mb-30" href="https://drive.google.com/file/d/1_9OQ6nF2eQgBgbRpGeWJ1Os44UI53n3E/view?usp=share_link" target="_blank" download><span class="glyphicon glyphicon-download-alt"></span> Download PDF</a>
 						<a class="btn td-btn outline green iconBtn mb-30" href="https://www.linkedin.com/in/malak-kariri-421ba713b" target="_blank"><span class="glyphicon glyphicon-user"></span> View LinkedIn Profile</a>
 					</div>
 					<div class="modal-footer center">
